# Time-Series-Database-Engine

./: .gitignore  README.md  alert_consumer.py  benchmark.py  docker-compose.yml  gitignore.  producer.py  requirements.txt  stream_processor.py
api/: main.py
engine/: CMakeLists.txt  insight.cpp  insight.h  shard.cpp  shard.h  test_engine.cpp
gui/: dashboard.py
tests/: explore_pyqt.py  test_api.py
